upload source files

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 /node_modules
 /package-lock.json
 /package.json
-/src
 /tsconfig.app.json
 /tsconfig.json
 /tsconfig.spec.json
+/src/app/postman.config.ts
